--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,4 @@
+project(test)
 find_package(OpenSSL REQUIRED)
 
 add_executable(example example.cpp)
@@ -9,5 +10,6 @@ target_link_libraries(evaluation PRIVATE header hash)
 target_compile_options(evaluation PUBLIC "-mavx2")
 
 add_executable(loadkv loadkv.cpp)
+target_include_directories(loadkv PRIVATE ${HEADPATH})
 target_link_libraries(loadkv PRIVATE header utils)
 target_compile_options(loadkv PUBLIC "-mavx2")
