修复导入数据中空间提前释放的问题

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,3 +13,8 @@ add_executable(loadkv loadkv.cpp)
 target_include_directories(loadkv PRIVATE ${HEADPATH})
 target_link_libraries(loadkv PRIVATE header utils)
 target_compile_options(loadkv PUBLIC "-mavx2")
+
+add_executable(encryption encryption.cpp)
+target_include_directories(encryption PRIVATE ${HEADPATH})
+target_link_libraries(encryption PRIVATE header)
+target_compile_options(encryption PUBLIC "-mavx2")
