--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,10 @@ set(CMAKE_CXX_FLAGS
 )
 set(CMAKE_EXE_LINKER_FLAGS "-lpthread ${CMAKE_EXE_LINKER_FLAGS}")
 set(CMAKE_CXX_FLAGS "-fpermissive ${CMAKE_CXX_FLAGS}")
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)      # 设置库的生成地址
+set(CMAKE_BUILD_TYPE "Debug")
+# set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)      # 设置库的生成地址
 
-set(HEADPATH ${PROJECT_SOURCE_DIR}/include)
+set(HEADPATH ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src/bamboofilter)
 
 add_subdirectory(src)
 add_subdirectory(test)
