--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(OpenSSL REQUIRED)
+
 add_library(header INTERFACE)
 target_include_directories(header INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -7,5 +9,6 @@ target_link_libraries(hash PUBLIC header)
 
 add_library(utils STATIC "common/utils.cpp")
 target_include_directories(utils PUBLIC ${HEADPATH})
-target_link_libraries(utils PUBLIC header mysqlclient)      # 需要链接  mysqlclient
+target_link_libraries(utils PUBLIC header mysqlclient ${OPENSSL_LIBRARIES})      # 需要链接  mysqlclient
+message(OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES})
 
