--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,5 +16,5 @@ target_compile_options(loadkv PUBLIC "-mavx2")
 
 add_executable(encryption encryption.cpp)
 target_include_directories(encryption PRIVATE ${HEADPATH})
-target_link_libraries(encryption PRIVATE header)
+target_link_libraries(encryption PRIVATE header utils)
 target_compile_options(encryption PUBLIC "-mavx2")
