--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,11 +27,11 @@ target_link_libraries(bambooemm PRIVATE header utils hash)
 target_compile_options(bambooemm PUBLIC "-mavx2")
 
 add_executable(simd simd.cpp)
-target_include_directories(simd PRIVATE ${HEADPATH})
-target_link_libraries(simd PRIVATE header utils hash)
+target_include_directories(simd PUBLIC ${HEADPATH})
+target_link_libraries(simd PUBLIC header utils hash)
 target_compile_options(simd PUBLIC "-mavx2")
 
 add_executable(segment segment.cpp)
-target_include_directories(segment PRIVATE ${HEADPATH})
-target_link_libraries(segment PRIVATE header utils hash)
+target_include_directories(segment PUBLIC ${HEADPATH})
+target_link_libraries(segment PUBLIC header utils hash)
 target_compile_options(segment PUBLIC "-mavx2")
